Rationalize level design and fix level skipping issue

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </div>
             <div class="ui-bottom">
                 <button id="pause-btn" class="btn btn-small">暂停</button>
+                <button id="pass-level-btn" class="btn btn-small hidden" style="background-color: #4CAF50;">过关</button>
                 <button id="quit-btn" class="btn btn-small">退出</button>
             </div>
         </div>
